Front pizza status in order on modal view